# artificery

./: .gitignore  README.md  pyproject.toml
artificery/: artificer.py  database.py  gemstones.py  main.py  trinkets.py
artificery/data_input/: gemstone_data.csv  trinket_data.csv
artificery/forge/: __init__.py  gemstone.py  spellbook.py  trinket.py
artificery/forge/models/: spellbook.json
